common/arpk/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arpk
  namespace: moeru-ai
  labels:
    app.kubernetes.io/name: arpk
    app.kubernetes.io/instance: arpk
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: arpk
      app.kubernetes.io/instance: arpk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: arpk
        app.kubernetes.io/instance: arpk
    spec:
      containers:
        - name: arpk
          image: ghcr.io/moeru-ai/arpk:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1188
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: arpk
  namespace: moeru-ai
  labels:
    app.kubernetes.io/name: arpk
    app.kubernetes.io/instance: arpk
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: arpk
    app.kubernetes.io/instance: arpk
  ports:
    - name: http
      port: 1188
      targetPort: http
      protocol: TCP
